# kolok_os

./: README.md
zadacha/: CMakeLists.txt  factorial.h  main.cpp  reverse_list.h  test.cpp
